# baxter_chess

./: CMakeLists.txt  README.md  baxter_chess.launch  index.html  package.xml  params.json
launch/: ar_track.launch  baxter_chess.launch
markers/: ar_alvar_tags.ai  ar_tags.ai
scripts/: stockfish.py
src/: ar_average.py  chess.py  control.py  controller.py  move.py  piece.py  stockfish.py  stockfish_32  watch.py  watcher.py
