<?xml version="1.0"?>
<package>
  <name>baxter_chess</name>
  <version>0.0.0</version>
  <description>A package to enable the Baxter robot to play chess.</description>

  <maintainer email="spencerschack@berkeley.edu">Spencer Schack</maintainer>
  <maintainer email="sam.friedman@berkeley.edu">Sam Friedman</maintainer>

  <license>GPLv2</license>

  <!-- <url type="website">http://wiki.ros.org/baxter_chess</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>

  <export>

  </export>
</package>